Truncate fix, remove unneeded admin-specific css

--- a/app/assets/stylesheets/framework/blocks.scss
+++ b/app/assets/stylesheets/framework/blocks.scss
@@ -1,8 +1,3 @@
-.light-well {
-  background-color: $background-color;
-  padding: 15px;
-}
-
 .centered-light-block {
   text-align: center;
   color: $gl-gray;
