--- a/app/assets/stylesheets/framework/common.scss
+++ b/app/assets/stylesheets/framework/common.scss
@@ -379,7 +379,9 @@ table {
   border-top: 1px solid $border-color;
 }
 
-.hide-bottom-border { border-bottom: none !important; }
+.hide-bottom-border {
+  border-bottom: none !important;
+}
 
 .gl-accessibility {
   &:focus {
@@ -394,5 +396,11 @@ table {
     color: $gl-title-color;
     background: $gray-light;
     z-index: 1;
+  }
+}
+
+.str-truncated {
+  &-60 {
+    @include str-truncated(60%);
   }
 }
